--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -54,3 +54,11 @@ h2 {
     padding: 10px;
     margin: 10px;
 }
+
+#players_buttons {
+    background-color: violet;
+}
+
+#armies_selector {
+    background-color: aquamarine;
+}
